--- a/package.json
+++ b/package.json
@@ -45,6 +45,6 @@
     "not ie 11"
   ],
 
-  "homepage": "https://tzinyongo.github.io/Bu-busy/"
+  "homepage": "https://tzinyongo.github.io/Deployment/"
 
 }
